--- a/MedioClinic/App_Data/Global/Resources/MedioClinic.resx
+++ b/MedioClinic/App_Data/Global/Resources/MedioClinic.resx
@@ -159,6 +159,15 @@
   <data name="Controllers.Account.ResetPassword.ViewbagMessage" xml:space="preserve">
     <value>Your password was successfully reset. You can now &lt;a href="{0}"&gt;sign in&lt;/a&gt;.</value>
   </data>
+  <data name="Controllers.Profile.Index.SavedChanges" xml:space="preserve">
+    <value>Your changes were saved.</value>
+  </data>
+  <data name="Controllers.Profile.Index.Title.Doctor" xml:space="preserve">
+    <value>Doctor</value>
+  </data>
+  <data name="Controllers.Profile.Index.Title.Patient" xml:space="preserve">
+    <value>Patient</value>
+  </data>
   <data name="Models.Account.RegisterViewModel.MarketingConsent" xml:space="preserve">
     <value>I hereby accept that these provided information can be used for marketing purposes and targeted website content.</value>
   </data>
